--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <!-- Meta Information -->
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
@@ -34,15 +35,15 @@
       <span class="title">tweeter</span>
       <div class="container">
         <span><span class="bold">Write</span> a new tweet</span>
-        <i class="fa-solid fa-angles-down fa-bounce" style="--fa-bounce-height: 10;"></i>
+        <i class="fa-solid fa-angles-down"></i>
       </div>
     </nav>
-    
-    <header>
+    <div class="layout-wrapper">
+    <header class="header-stuff">
       <div>
         <img src="/images/profile-hex.png"> 
       </div>
-      <div>
+      <div >
         <h2>Kilgore Trout</h2>
       </div>
     </header>
@@ -54,6 +55,7 @@
             <span id="err-msg"></span>
           </div>
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+        </script>
           <div class="count">
             <button type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
@@ -63,6 +65,7 @@
       <section class="tweet-container">
       </section>
     </main>
+  </div>
   </body>
   </html>
   
