modify header class name for avatar

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       </div>
     </nav>
     <div class="layout-wrapper">
-    <header class="header-stuff">
+    <header class="avatar-header">
       <div>
         <img src="/images/profile-hex.png"> 
       </div>
@@ -55,7 +55,6 @@
             <span id="err-msg"></span>
           </div>
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
-        </script>
           <div class="count">
             <button type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
